# JuliaPkgTemplatesCLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mise.toml  pyproject.toml  run_tests.py  test_feature.md  test_workflow.md
.github/workflows/: prerelease.yml  release.yml  sync-tags.yml  tag-sync.yml  update-release-pr-title.yml
docs/: workflow.md
scripts/: pkg_generator.jl
src/jugen/: __init__.py  cli.py  generator.py
src/jugen/scripts/: pkg_generator.jl
src/juliapkgtemplates/: __init__.py  cli.py  generator.py
src/juliapkgtemplates/scripts/: pkg_generator.jl
src/juliapkgtemplates/templates/: fish_completion.j2  julia_template.j2  mise.toml.j2
tests/: conftest.py  test_cli.py  test_cli_plugin_options.py  test_fallback_behavior_validation.py  test_generator.py  test_git_config_fallback.py  test_git_errors.py  test_git_integration.py  test_helpers.py  test_integration.py  test_julia_author_mail_combination.py  test_julia_git_integration.py  test_multiple_plugin_options.py  test_plugin_options.py
