[project]
name = "JuliaPkgTemplatesCLI"
version = "0.1.1"
description = "Julia package template generator with PkgTemplates.jl and mise tasks integration"
readme = "README.md"
authors = [{ name = "ultimatile" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = ["click>=8.0.0", "jinja2>=3.0.0", "tomli-w>=1.0.0"]

[project.urls]
Homepage = "https://github.com/ultimatile/JuliaPkgTemplatesCLI"
Repository = "https://github.com/ultimatile/JuliaPkgTemplatesCLI"
Issues = "https://github.com/ultimatile/JuliaPkgTemplatesCLI/issues"

[project.scripts]
jtc = "juliapkgtemplates.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juliapkgtemplates"]

[dependency-groups]
dev = ["pyright>=1.1.402", "pytest>=8.3.5", "python-semantic-release>=9.0.0"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true
# Consider all tags for version calculation
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore:", "ci:", "test:", "docs:", "style:"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
